--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 </div>
 <!--关于我们-->
 <div class="aboutList">
-    <li>张洪涛</li>
-    <li>张洪涛</li>
-    <li>张洪涛</li>
-    <li>张洪涛</li>
+    <li>张春明</li>
+    <li>张春明</li>
+    <li>张春明</li>
+    <li>张春明</li>
 </div>
 
 <div class="mainer">
